2004-01-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Added warning about auto-generation of configure.ac
  - Peter Eistentraut's patch for finding postgres headers & libraries
 README:
  - No longer need --with-postgres etc. (thanks Peter!)
 TODO:
  - Bart Samwel found great solution for pipeline's one major weakness
2004-01-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/pipeline.hxx:
  - Warning about syntax errors
 src/pipeline.cxx:
  - Better handling of awkward error situations
 src/util.cxx:
  - Fixed bool conversion (missing break), thanks Roger Leigh!
 test/test072.cxx:
  - Tests runtime error rather than SQL syntax error
  - Succeeds now
2004-01-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/pipeline.hxx:
  - Full test coverage
  - Added retain() and resume()
  - Better error message when retrieving result for unknown query
 src/connection_base.cxx:
  - Fix: combination of asyncconnection/nontransaction/pipeline didn't connect
 test/test069.cxx, test/test070.cxx, test/test071.cxx, test/test072.cxx:
  - New
  - Test pipeline class
2004-01-11  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh:
  - Check for automake 1.8
 README, win32/README:
  - Minor updates wrt Windows-specific material
2004-01-02  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in, include/pqxx/util.h:
  - Re-included std::string.clear() check which had been lost
  - Replaced #pragma warning with #pragma message, thanks key88sf@hotmail.com
 README:
  - Documented manual editing of configuration headers
 include/connection_base.hxx, src/connection_base.cxx:
  - Changed Windows workarounds for select(), thanks key88sf@hotmail.com
 src/cursor.cxx:
  - Workaround for min()/max() problem in Windows, thanks key88sf@hotmail.com
 test/test004.cxx, test/test023.cxx:
  - Updated Windows vs. select() workarounds
2003-12-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/pipeline.cxx:
  - Compiles
2003-12-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/except.hxx: